new homepage layout, and general cleanup and facelift

--- a/posts/2024-12-28-home-assistant-intro.mdx
+++ b/posts/2024-12-28-home-assistant-intro.mdx
@@ -1,21 +1,15 @@
 ---
 slug: home-assistant
 title: 🏠 You (might) NEED Home Assistant
-authors: mosborne
 tags: [Software Engineering, Home Automation]
 ---
-
-You probably just don't know it yet.
-
-What I use [Home Assistant](https://www.home-assistant.io/) for. Hint: you can use it for way more than just home automation. By the end of this article you will hopefully be convinced to give it a try.
-
 <!-- truncate -->
 
 ## WHY
 
 In case you don't know, [Home Assistant](https://www.home-assistant.io/) is software that allows you to automate and track things in you life far easier, free-er, and simpler (low/no code) than other methods. If you're like me, I had mutliple apps on my phone, some paid, to automate or track different things like how much water I drink, control the TV, and multiple "Smart Home" device apps like Philips Hue. 
 
-Home Assistants primary purpose is for home automation. Stuff like turn on lights after 6pm, turn on the heater when it gets cold, etc. But, the generic tools they created for if-this-then-that home automating and the amount of integrations supported officially and unofficially (through [Home Assistant Community Store or HACS](https://www.hacs.xyz/)) create a wide range possibilities.
+Home Assistants primary purpose is for home automation. Stuff like turn on lights after 6pm, turn on the heater when it gets cold, etc. But, the generic tools they created for if-this-then-that home-automating and the amount of integrations supported officially and unofficially (through [Home Assistant Community Store or HACS](https://www.hacs.xyz/)) create a wide range possibilities.
 
 I originally got into Home Assistant just to see if I could turn on and off smart lights, now I use it to help track and visualize personal and health goals and to reduce the amount of things I need to keep track of or think about every day.
 
