--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -1,6 +1,6 @@
 ---
 title: About Me
-description: Michael Osborne - Mikeys World - About me
+description: Michael Osborne - Mikey's World - About me
 ---
 
 # Hello! 👋 My name is Mike Osborne
