feat: deploy to cloudflare for super speed

--- a/posts/2024-05-18-first-project-post.mdx
+++ b/posts/2024-05-18-first-project-post.mdx
@@ -40,13 +40,13 @@ us from the auto-playing max-volume ads of yester-year but I am grateful
 
 I have since removed this video cause it was distracting, but here it is for posterity:
 
-import ReactPlayer from 'react-player/file'
+import ReactPlayer from 'react-player'
 
-<ReactPlayer playing muted loop url="https://storage.googleapis.com/website-asset-bucket/elf.webm" width="100%" height="auto" />
+<ReactPlayer playing muted loop src="/webm/elf.webm" width="100%" height="auto" />
 
 
 :::
 
 Much more to come, but to make this a truly official Mikey project, here's my favorite development testing image
 
-![a cute dog](https://storage.googleapis.com/website-asset-bucket/puppy.jpg)
+![a cute dog](/img/puppy.jpg)
