--- a/posts/2024-12-28-home-assistant-intro.mdx
+++ b/posts/2024-12-28-home-assistant-intro.mdx
@@ -29,7 +29,7 @@ In no particular order, this is a list of what I have used Home Assistant for, s
 
 <div style={{ display: 'flex', justifyContent: 'center' }}>
 <figure style={{ width: '100%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/ha-home-presence-history.png" alt="home presence tracking dashboard" />
+<img src="/img/ha-home-presence-history.png" alt="home presence tracking dashboard" />
 <figcaption style={{ textAlign: 'center' }}>*Home presence tracking dashboard*</figcaption>
 </figure>
 </div>
@@ -45,7 +45,7 @@ This data can be used for all kinds of things:
 
 <div style={{ display: 'flex', justifyContent: 'center' }}>
 <figure style={{ width: '50%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/ha-tv-control.jpeg" alt="tv control dashboard" />
+<img src="/img/ha-tv-control.jpeg" alt="tv control dashboard" />
 <figcaption style={{ textAlign: 'center' }}>*TV Control Widget*</figcaption>
 </figure>
 </div>
@@ -56,19 +56,19 @@ My dog ate my TV remote, Home Assistant automatically picks up smart TVs on the 
 
 <div style={{ display: 'flex', flexWrap: 'wrap', justifyContent: 'center' }}>
 <figure style={{ width: '30%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/ha-dog-tracker.png" alt="dog dashboard" />
+<img src="/img/ha-dog-tracker.png" alt="dog dashboard" />
 <figcaption style={{ textAlign: 'center' }}>*Dog Dashboard*</figcaption>
 </figure>
 <figure style={{ width: '30%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/door-dog-tracker-device.jpg" alt="doorway dog tracker device" />
+<img src="/img/door-dog-tracker-device.jpg" alt="doorway dog tracker device" />
 <figcaption style={{ textAlign: 'center' }}>*Doorway dog tracker device*</figcaption>
 </figure>
 <figure style={{ width: '30%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/my-desk-dog-tracker-device.jpg" alt="my desk dog tracker device" />
+<img src="/img/my-desk-dog-tracker-device.jpg" alt="my desk dog tracker device" />
 <figcaption style={{ textAlign: 'center' }}>*My desk*</figcaption>
 </figure>
 <figure style={{ width: '30%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/katrina-desk-dog-tracker-device.jpg" alt="girlfriends desk dog tracker device" />
+<img src="/img/katrina-desk-dog-tracker-device.jpg" alt="girlfriends desk dog tracker device" />
 <figcaption style={{ textAlign: 'center' }}>*Girlfriend's desk*</figcaption>
 </figure>
 </div>
@@ -85,7 +85,7 @@ This will definitely get a full write-up because it has been the most useful.
 
 <div style={{ display: 'flex', justifyContent: 'center' }}>
 <figure style={{ width: '50%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/ha-energy-drink-tracker.png" alt="energy drink dashboard" />
+<img src="/img/ha-energy-drink-tracker.png" alt="energy drink dashboard" />
 <figcaption style={{ textAlign: 'center' }}>*Energy drink dashboard*</figcaption>
 </figure>
 </div>
@@ -96,7 +96,7 @@ I used Home Assistant to get myself to stop drinking energy drinks and to switch
 
 <div style={{ display: 'flex', justifyContent: 'center' }}>
 <figure style={{ width: '50%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/ha-exercise.png" alt="exercise dashboard" />
+<img src="/img/ha-exercise.png" alt="exercise dashboard" />
 <figcaption style={{ textAlign: 'center' }}>*Exercise dashboard*</figcaption>
 </figure>
 </div>
@@ -107,11 +107,11 @@ Similar to energy drink tracking, I found entering in the number of these I do a
 
 <div style={{ display: 'flex', flexWrap: 'wrap', justifyContent: 'center' }}>
 <figure style={{ width: '30%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/ha-mike-room-temp.png" alt="room temp dashboard" />
+<img src="/img/ha-mike-room-temp.png" alt="room temp dashboard" />
 <figcaption style={{ textAlign: 'center' }}>*Room temp/CO2/humidity dashboard*</figcaption>
 </figure>
 <figure style={{ width: '30%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/ha-mike-room-temp-device.jpg" alt="room temp dashboard" />
+<img src="/img/ha-mike-room-temp-device.jpg" alt="room temp dashboard" />
 <figcaption style={{ textAlign: 'center' }}>*Room temp/CO2/humidity device*</figcaption>
 </figure>
 </div>
@@ -122,7 +122,7 @@ I use a SCD41 hooked up to a Raspberry Pi Pico W to measure CO2 levels in my poo
 
 <div style={{ display: 'flex', justifyContent: 'center' }}>
 <figure style={{ width: '50%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/ha-historical-weather-map-tracking.png" alt="historical weather tracking" />
+<img src="/img/ha-historical-weather-map-tracking.png" alt="historical weather tracking" />
 <figcaption style={{ textAlign: 'center' }}>*Historical weather dashboard*</figcaption>
 </figure>
 </div>
@@ -133,11 +133,11 @@ I use the OpenWeatherMap integration to record historical weather. I find this u
 
 <div style={{ display: 'flex', flexWrap: 'wrap', justifyContent: 'center' }}>
 <figure style={{ width: '30%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/ha-garmin-connect.png" alt="garmin connect dashboard" />
+<img src="/img/ha-garmin-connect.png" alt="garmin connect dashboard" />
 <figcaption style={{ textAlign: 'center' }}>*Garmin connect dashboard*</figcaption>
 </figure>
 <figure style={{ width: '30%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/ha-grafana-health-dashboard.png" alt="grafana health dashboard" />
+<img src="/img/ha-grafana-health-dashboard.png" alt="grafana health dashboard" />
 <figcaption style={{ textAlign: 'center' }}>*Grafana health dashboard*</figcaption>
 </figure>
 </div>
@@ -148,7 +148,7 @@ Using the Garmin connect integration (from HACS) and the Fitbit integration for 
 
 <div style={{ display: 'flex', justifyContent: 'center' }}>
 <figure style={{ width: '50%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/ha-3d-printer-dashboard.png" alt="3d printer dashboard" />
+<img src="/img/ha-3d-printer-dashboard.png" alt="3d printer dashboard" />
 <figcaption style={{ textAlign: 'center' }}>*3D printer dashboard*</figcaption>
 </figure>
 </div>
@@ -165,7 +165,7 @@ Some notes on the main things I use to drive everything and the lessons learned:
 
 <div style={{ display: 'flex', justifyContent: 'center' }}>
 <figure style={{ width: '50%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/ha-helpers.png" alt="helpers view" />
+<img src="/img/ha-helpers.png" alt="helpers view" />
 <figcaption style={{ textAlign: 'center' }}>*My helpers*</figcaption>
 </figure>
 </div>
