--- a/src/pages/about.mdx
+++ b/src/pages/about.mdx
@@ -7,7 +7,7 @@ description: Michael Osborne - Mikey's World - About me
 
 <div style={{ display: 'flex', justifyContent: 'center' }}>
 <figure style={{ width: '50%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/me.jpg" alt="me" />
+<img src="/img/me.jpg" alt="me" />
 <figcaption style={{ textAlign: 'center' }}>*At Waimea Canyon, Kauai*</figcaption>
 </figure>
 </div>
@@ -25,11 +25,11 @@ Outside of software, I enjoy all the outdoor fun the Pacific Northwest has to of
 
 <div style={{ display: 'flex', flexWrap: 'wrap', justifyContent: 'center' }}>
 <figure style={{ width: '30%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/bike.jpg" alt="my bike" />
+<img src="/img/bike.jpg" alt="my bike" />
 <figcaption style={{ textAlign: 'center' }}>*My bike at the ballard locks*</figcaption>
 </figure>
 <figure style={{ width: '30%' }}>
-<img src="https://storage.googleapis.com/website-asset-bucket/catch-of-the-day.jpg" alt="catch of the day" />
+<img src="/img/catch-of-the-day.jpg" alt="catch of the day" />
 <figcaption style={{ textAlign: 'center' }}>*The catch of the day*</figcaption>
 </figure>
 </div>
